# XLNC

./: .gitignore  Dockerfile  README.md  app.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
xlnc/: main.py  shutdown.py  startup.py
xlnc/api/checkout/: get.py
xlnc/api/comment/[id]/: post.py
xlnc/api/image/[id]/: get.py
xlnc/api/item/: get.py  post.py
xlnc/api/item/[name]/: get.py
xlnc/api/login/: post.py
xlnc/api/register/: post.py
xlnc/database/SQLITE/: XLNCDb.py
xlnc/routes/: layout.html  page.html
xlnc/routes/auth/login/: page.html
xlnc/routes/auth/register/: page.html
xlnc/routes/categories/: load.py  page.html
xlnc/routes/product/: load.py  page.html
xlnc/static/: error.html  index.html  out.css
