[tool.poetry]
name = "xlnc"
version = "0.1.0"
description = ""
authors = ["karl robeck alferez <karlalferezfx@gmail.com>","sean john camara <seanjohncamara1114@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pypox = "^1.4.1"
jinja2 = "^3.1.2"
aiosqlite = "^0.19.0"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
